<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"/>

        <Spinner
            android:id="@+id/spinner_game_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/player_one_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/player_one"/>

        <EditText
            android:id="@+id/player_two_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/player_two" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_size"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spinner_grid_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start"/>

</RelativeLayout>