<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingTop="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="38sp"/>

    <Button
        android:id="@+id/history_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/show_history"
        android:textAllCaps="true"
        android:textSize="26sp"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/history_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textSize="26sp"/>


</RelativeLayout>